# rss_reader

./: arg_parser.py  logs.py  one_shot.py  pyproject.toml  requirements.txt  rss_reader.py
rss_reader/: __init__.py  __main__.py  _version.py  arg_parser.py  one_shot.py
tests/fixtures/: article_parser.py  feed.xml  feed_parse_expected_result.json  invalid_feed.xml  parsed_feed.py
tests/unit/: test_one_shot.py  test_rss_reader.py
